Release CMTK-1.3.1:

- Added: CMake configuration of CUDA and OpenCL support for future GPU
    computations. Currently unused and experimental.
- Refactored: UniformDistanceMap is now a factory class and no longer directly
    inherits from UniformVolume.x
- API: renamed "GetDownsampled" member in DataGrid and UniformVolume classes
    to "GetDownsampledAndAveraged" to clarify that this is a
    downsampling-and-averaging operation, not just a downsampling.
- Refactored: greatly improved handling of grid index and region types.
- Added: SmartConstPointer, based on concepts in Meyer's "More Effective C++"
    book.
- Removed: unused classes from the deprecated "Pipeline" library
- Documentation: descibe library groups in doxygen documentation
- Libraries: all reconstruction-related classes were consolidated in a new
    component library, "cmtkRecon"
- Removed: unused cmtk::DirectionSetOptimizer class.
- Removed: unused member functions of cmtk::Vector that complicate the API and
    stand in the way of eventually replacing this class with std::valarray.
- Refactored: where appropriate, catch exceptions by constant references,
    rather than by value or by non-constant reference.


Release CMTK-1.3.0 (2010-04-19):

- Added: a new command line tool, "dbtool", to modify, query, and maintain
    databases of images and of transformations between them.
- Fixed: consolidated redundant "--switch" and "--exchange" parameters to
    "warp" tool (Issue #3616). Also fixed initial transformation missing
    inversion bug (unreported) for inverse-consistent nonrigid registration.
- Fixed: if this is supported, default to terminal width for line width in
    cmtk::Console::FormatText
- Added: image/transformation database support for the following registration
    tools: "registration", "registrationx", "warp", "reformatx"
- API: cmtk::MetaInformationObject is getting a more explicit and
    task-appropriate interface.