@@ -1,7 +1,8 @@
 /*
 //
 //  Copyright 1997-2009 Torsten Rohlfing
-//  Copyright 2004-2009 SRI International
+//
+//  Copyright 2004-2010 SRI International
 //
 //  This file is part of the Computational Morphometry Toolkit.
 //
@@ -80,7 +81,7 @@ VolumeAxesHash::VolumeAxesHash
 }
 
 VolumeAxesHash::VolumeAxesHash
-( const UniformVolume& volume, const InfinitePlane& mirrorPlane, const Types::Coordinate* deltas )
+( const UniformVolume& volume, const ParametricPlane& mirrorPlane, const Types::Coordinate* deltas )
 {
   // define volume corners
   Vector3D dX(1,0,0), dY(0,1,0), dZ(0,0,1);
