@@ -1,5 +1,7 @@
 Release CMTK-1.3.1:
 
+- API: renamed "InfinitePlane" class to "ParametricPlane" which is more
+    descriptive and precise.
 - Added: CMake configuration of CUDA and OpenCL support for future GPU
     computations. Currently unused and experimental.
 - Refactored: UniformDistanceMap is now a factory class and no longer directly
